@@ -74,27 +74,33 @@ class AssistanceServiceImplTest {
     // ==========================================
     @Test
     void givenExistingAssistance_whenFindAll_thenReturnEnrichedList() {
+        // GIVEN
         when(repository.findAll()).thenReturn(List.of(assistanceEntity));
         when(userClient.findById(10L)).thenReturn(mockUser);
         when(classeClient.findById(5L)).thenReturn(mockClasse);
 
+        // WHEN
         List<AssistanceResponseDto> result = service.findAll();
 
+        // THEN
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertNotNull(result.get(0).getUser());
-        assertNotNull(result.get(0).getClasse());
+        assertNotNull(result.getFirst().getUser());
+        assertNotNull(result.getFirst().getClasse());
     }
 
     @Test
     void givenEnrichmentFails_whenFindById_thenReturnDtoWithNulls() {
+        // GIVEN
         when(repository.findById(1L)).thenReturn(Optional.of(assistanceEntity));
         // Simulamos caídas en los microservicios externos para forzar los bloques catch del mapeador
         when(userClient.findById(10L)).thenThrow(new RuntimeException("MS Usuarios Caído"));
         when(classeClient.findById(5L)).thenThrow(new RuntimeException("MS Classes Caído"));
 
+        // WHEN
         AssistanceResponseDto result = service.findById(1L);
 
+        // THEN
         assertNotNull(result);
         assertNull(result.getUser());
         assertNull(result.getClasse());
@@ -102,8 +108,13 @@ class AssistanceServiceImplTest {
 
     @Test
     void givenNonExistingId_whenFindById_thenReturnNull() {
+        // GIVEN
         when(repository.findById(99L)).thenReturn(Optional.empty());
+
+        // WHEN
         AssistanceResponseDto result = service.findById(99L);
+
+        // THEN
         assertNull(result);
     }
 
@@ -112,12 +123,15 @@ class AssistanceServiceImplTest {
     // ==========================================
     @Test
     void givenValidRequest_whenCreate_thenReturnCreatedDto() {
+        // GIVEN
         when(userClient.findById(10L)).thenReturn(mockUser);
         when(classeClient.findById(5L)).thenReturn(mockClasse);
         when(repository.save(any(Assistance.class))).thenReturn(assistanceEntity);
 
+        // WHEN
         AssistanceResponseDto result = service.create(requestDto);
 
+        // THEN
         assertNotNull(result);
         assertEquals(1L, result.getIdAssistance());
         verify(repository, times(1)).save(any(Assistance.class));
@@ -125,8 +139,10 @@ class AssistanceServiceImplTest {
 
     @Test
     void givenInvalidUser_whenCreate_throwIllegalArgumentException() {
+        // GIVEN
         when(userClient.findById(10L)).thenReturn(null); // El usuario no existe remótamente
 
+        // WHEN & THEN
         IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> {
             service.create(requestDto);
         });
@@ -137,9 +153,11 @@ class AssistanceServiceImplTest {
 
     @Test
     void givenInvalidClasse_whenCreate_throwIllegalArgumentException() {
+        // GIVEN
         when(userClient.findById(10L)).thenReturn(mockUser);
         when(classeClient.findById(5L)).thenReturn(null); // La clase no existe remótamente
 
+        // WHEN & THEN
         IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> {
             service.create(requestDto);
         });
@@ -152,25 +170,31 @@ class AssistanceServiceImplTest {
     // ==========================================
     @Test
     void givenExistingIdAndValidRequest_whenUpdate_thenReturnUpdatedDto() {
+        // GIVEN
         when(userClient.findById(10L)).thenReturn(mockUser);
         when(classeClient.findById(5L)).thenReturn(mockClasse);
         when(repository.existsById(1L)).thenReturn(true);
         when(repository.save(any(Assistance.class))).thenReturn(assistanceEntity);
 
+        // WHEN
         AssistanceResponseDto result = service.update(1L, requestDto);
 
+        // THEN
         assertNotNull(result);
         verify(repository, times(1)).save(any(Assistance.class));
     }
 
     @Test
     void givenNonExistingId_whenUpdate_thenReturnNull() {
+        // GIVEN
         when(userClient.findById(10L)).thenReturn(mockUser);
         when(classeClient.findById(5L)).thenReturn(mockClasse);
         when(repository.existsById(99L)).thenReturn(false);
 
+        // WHEN
         AssistanceResponseDto result = service.update(99L, requestDto);
 
+        // THEN
         assertNull(result);
     }
 
@@ -179,21 +203,27 @@ class AssistanceServiceImplTest {
     // ==========================================
     @Test
     void givenExistingId_whenDelete_thenReturnTrue() {
+        // GIVEN
         when(repository.existsById(1L)).thenReturn(true);
         doNothing().when(repository).deleteById(1L);
 
+        // WHEN
         boolean result = service.delete(1L);
 
+        // THEN
         assertTrue(result);
         verify(repository, times(1)).deleteById(1L);
     }
 
     @Test
     void givenNonExistingId_whenDelete_thenReturnFalse() {
+        // GIVEN
         when(repository.existsById(99L)).thenReturn(false);
 
+        // WHEN
         boolean result = service.delete(99L);
 
+        // THEN
         assertFalse(result);
     }
 
@@ -202,29 +232,37 @@ class AssistanceServiceImplTest {
     // ==========================================
     @Test
     void givenExistingUser_whenFindByUserId_thenReturnList() throws Exception {
+        // GIVEN
         when(userClient.findById(10L)).thenReturn(mockUser);
         when(repository.findByIdUser(10L)).thenReturn(List.of(assistanceEntity));
         when(classeClient.findById(5L)).thenReturn(mockClasse);
 
+        // WHEN
         List<AssistanceResponseDto> result = service.findByUserId(10L);
 
+        // THEN
         assertNotNull(result);
         assertEquals(1, result.size());
     }
 
     @Test
     void givenNonExistingUser_whenFindByUserId_thenReturnNull() throws Exception {
+        // GIVEN
         when(userClient.findById(99L)).thenReturn(null);
 
+        // WHEN
         List<AssistanceResponseDto> result = service.findByUserId(99L);
 
+        // THEN
         assertNull(result);
     }
 
     @Test
     void givenException_whenFindByUserId_throwException() {
+        // GIVEN
         when(userClient.findById(10L)).thenThrow(new RuntimeException("Error en conexión"));
 
+        // WHEN & THEN
         Exception exception = assertThrows(Exception.class, () -> {
             service.findByUserId(10L);
         });
